# FlutterSec-Automator

./: .gitignore  README.md  pyproject.toml
fluttersec/: __init__.py  cli.py
fluttersec/core/: __init__.py  apk_parser.py  binary_analyzer.py  engine_detect.py  extractor.py  script_generator.py  version_detector.py
fluttersec/data/: patterns.yaml  version_map.yaml
fluttersec/templates/: frida_ssl_bypass.js.j2
fluttersec/utils/: __init__.py  fs.py  logger.py
tests/: __init__.py  conftest.py  test_apk_parser.py  test_binary_analyzer.py  test_extractor_and_engine_detect.py  test_script_generator.py  test_version_detector.py
