[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluttersec-automator"
version = "0.1.0"
description = "Automate dynamic analysis of Flutter applications — SSL bypass Frida script generator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FlutterSec Team" }]
keywords = [
    "flutter",
    "security",
    "frida",
    "ssl-pinning",
    "android",
    "dynamic-analysis",
    "reverse-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "rich>=13.0",
    "lief>=0.14.0,<0.16",
    "androguard>=3.4",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML",
]

[project.scripts]
fluttersec = "fluttersec.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["fluttersec"]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line-length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["fluttersec"]

# ── Mypy (strict type checking) ───────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # lief & androguard lack stubs

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
